--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             }
             function changeTitle() {
                 var title = document.getElementByID("title");
-                title.InnerHTML("I have changed the title");
+                title.innerHTML("I have changed the title");
             }
         </script>
         <link rel="stylesheet" href="style.css">
