--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
                 teaspoons.value = output;
             }
             function changeTitle() {
-                var title = document.getElementByID("title");
-                title.innerHTML="I have changed the title";
+                document.getElementById("title").innerHTML = "I have changed the title!";
             }
         </script>
         <link rel="stylesheet" href="style.css">
