--- a/familyFeud.html
+++ b/familyFeud.html
@@ -119,6 +119,17 @@
         <br>
 
     </div>
+    <div id="level1.1">
+        <h2 id="levelName">Level 1</h2>
+        <h3 id="levelQuestion">Name Something That Moves Very Slowly: 8 answers</h3>
+        <label for="slow">Your Answer:</label>
+        <input type="text" id="slow" name="slow" value=" ">
+        <br>
+
+        <button type="button" onclick="check1()">Check</button>
+    <!-- This button, when clicked, will make it so only the second level is visible -->
+        <button type="button" onclick="view()">Next</button>
+    </div>
 </div>
 </form>
 <script>
@@ -153,6 +164,11 @@
             alert("Keep Going!");
             document.getElementById("slow").value = " ";
         }
+    }
+    
+    function oneToTwo() {
+        document.getElementById("levelName").innerHTML = "Level 2";
+        document.getElemenyByID("levelQuestion").innerHTML = "Name Something People Are Afraid Of: ";
     }
 </script>
 </body>
