--- a/familyFeud.html
+++ b/familyFeud.html
@@ -129,6 +129,7 @@
         <button type="button" onclick="check1()">Check</button>
     <!-- This button, when clicked, will make it so only the second level is visible -->
         <button type="button" onclick="view()">Next</button>
+        <button type="button" onclick="oneToTwo()">One to Two</button>
     </div>
 </div>
 </form>
