--- a/familyFeud.html
+++ b/familyFeud.html
@@ -179,7 +179,7 @@
     
     function oneToTwo() {
         document.getElementById("levelName").innerHTML = "Level 2";
-        document.getElementByID("levelQuestion").innerHTML = "Name Something People Are Afraid Of: ";
+        document.getElementById("levelQuestion").innerHTML = "Name Something People Are Afraid Of: ";
     }
 </script>
 </body>
