--- a/familyFeud.html
+++ b/familyFeud.html
@@ -182,7 +182,7 @@
         document.getElementById("levelQuestion").innerHTML = "Name Something People Are Afraid Of: ";
     }
     let levelOneAllGuessed = False;
-    let sloths = False;
+    let sloths = false;
     let glaciers = False;
     let snails = False;
     function check4() {
@@ -191,7 +191,7 @@
             right++;
             alert("Keep Going!");
             document.getElementById("slow2").value = " ";
-            sloths = True;
+            sloths = true;
             alert(sloths);
         }
      }
