--- a/familyFeud.html
+++ b/familyFeud.html
@@ -192,7 +192,11 @@
             alert("Keep Going!");
             document.getElementById("slow2").value = " ";
             sloths = true;
-            alert(sloths);
+            if (sloths === true) {
+                alert("True!");
+            } else {
+                alert("False :(");
+            }
         }
      }
 </script>
