--- a/familyFeud.html
+++ b/familyFeud.html
@@ -182,7 +182,7 @@
         document.getElementById("levelQuestion").innerHTML = "Name Something People Are Afraid Of: ";
     }
     let levelOneAllGuessed = False;
-    let sloths = false;
+    let sloths = False;
     let glaciers = False;
     let snails = False;
     function check4() {
@@ -191,8 +191,8 @@
             right++;
             alert("Keep Going!");
             document.getElementById("slow2").value = " ";
-            sloths = true;
-            if (sloths === true) {
+            sloths = True;
+            if (sloths === True) {
                 alert("True!");
             } else {
                 alert("False :(");
