--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             var answer = 3 + 4;
             alert(answer);
             
-            //var title = document.getElementById("blog-title")
-            //title.innerHTML() = "Zion's Website";
+            var title = document.getElementById("blog-title")
+            title.innerHTML() = "Zion's Website";
         </script>
 
         <h3 class="heading">Contents</h3>
