--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             alert(answer);
             
             var title = document.getElementById("blog-title")
-            title.innerHTML() = "Zion's Website";
+            title.innerHTML = "Zion's Website";
         </script>
 
         <h3 class="heading">Contents</h3>
