--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
             var y = 4;
             var answer = 3 + 4;
             alert(answer);
+            function Greeting(name) {
+                alert("Hello, "+name);
+            }
+            Greeting('devon');
             
             var title = document.getElementById("blog-title")
             title.innerHTML = "Zion's Website";
