--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             var answer = 3 + 4;
             alert(answer);
             function Greeting(name) {
-                alert("Hello, "+name);
+                console.log("Hello, "+name);
             }
             Greeting('devon');
             
