--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <body>
         
         <h1 id="blog-title" class="heading">Zion's Blog</h1>
-        <p id="answers"></p>
+        <input type="text" id="text-input"><p id="answers"></p>
         <script>
             var x = 3;
             var y = 4;
@@ -40,7 +40,7 @@
             alert(answer);
             function Greeting(name) {
                 console.log("Hello, "+name);
-                var age = console.write("What is your age?");
+                var age = console.write("What is your ag;
                 var answers = document.getElementById('answers')
                 answers.innerHTML() = age;
             }
